fixed footer on mobile, made titles underlined, made tags more responsive for mobile, mobile nav bar now follows dark theme, attempt at using an svg icon in author panel for torque forums link

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,7 @@ pre.inline {
     display: inline-block;
 }
 h4 a, h4 a:hover {
+    text-decoration: underline;
     color: {{ dark }};
 }
 h3 a {
@@ -285,6 +286,12 @@ html.dark-mode body {
 html.dark-mode nav {
     background-color: {{ dark }} !important;
 }
+html.dark-mode .navbar-toggler {
+    border-color: {{ light }};
+}
+html.dark-mode .navbar-toggler-icon {
+    background-image: url(data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e) !important;
+}
 html.dark-mode .card {
     border-color: {{ dark }};
 }
@@ -354,7 +361,6 @@ html.dark-mode h3 a {
 }
 html.dark-mode h4 a, html.dark-mode h4 a:hover {
     color: {{ light }};
-    text-decoration: none;
 }
 html.dark-mode .card {
     background-color: {{ dark2 }};
